Change link to CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Proza+Libre:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <title>Style Guide</title>
-        <link href="styles.css" type="text/css" rel="stylesheet">
+        <link href="starting/styles.css" type="text/css" rel="stylesheet">
     </head>
 
     <body>
